--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -1,3 +1,4 @@
+<!-- CSS clock that takes the current time from JS and updates the clock hands based on hour, minute, second --> 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -57,18 +58,68 @@
       transform: translateY(-3px); /* account for the height of the clock hands */
     }
 
+    /* going to apply a rotate to each of the hands depending on the current time */
     .hand {
       width: 50%;
       height: 6px;
       background: black;
       position: absolute;
       top: 50%;
+      /* origin is where the browser does the rotation from */
+      /* 100% means from the far right edge */
+      /* by default transform-origin is at 50% */
+      transform-origin: 100%;
+      /* divs are block, they go from left to right, so the hand doesn't start at 12 */
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
   </style>
-
   <script>
+  // selects the HTML element for the second hand 
+  const secondHand = document.querySelector('.second-hand'); 
+  
+  const minsHand = document.querySelector('.min-hand');
 
+  const hourHand = document.querySelector('.hour-hand');
+
+  // function to run every second
+  function setDate() {
+    // console.log('Hi');
+
+    const now = new Date();
+
+    // gives me the seconds of the current minute
+    // first need to convert the seconds to something that is base 100
+
+    const seconds = now.getSeconds();
+
+    // gives me the degrees of the clock face that is equivalent to the number of seconds in the minute
+    const secondsDegrees = (seconds / 60) * 360 + 90;
+
+    // using es6 template literals
+    // transforming the HTML element assigned to the variable 
+    secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+    
+    // console.log(seconds);
+
+    const mins = now.getMinutes();
+
+    const minsDegrees = (mins / 60) * 360 + 90;
+
+    minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+    const hour = now.getHours();
+
+    const hourDegrees = (hour / 12) * 360 + 90;
+
+    hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+
+  }
+
+  // interval will be set to 1 second/1000 ms
+  setInterval(setDate, 1000);
 
   </script>
 </body>
