--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,16 +27,67 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+
+    // .some checks if at least one thing in the array meets a condition
+    // some will take a function that will check it
+    // const isAdult = people.some(function(person) {
+    //   const currentYear = (new Date()).getFullYear();
+    //   if (currentYear - person.year >= 19) {
+    //     return true;
+    //   }
+    // });
+    // // curly braces will lead to the console showing me the name of the variable
+
+    // const isAdult = people.some(person => {
+    //   const currentYear = (new Date()).getFullYear();
+    //   return currentYear - person.year >= 19;
+    // });
+
+    const isAdult = people.some(person => ((new Date()).
+      getFullYear()) - person.year >= 19);
+
+    // console.log({isAdult});
+    
+
     // Array.prototype.every() // is everyone 19 or older?
 
+    // .every checks if all things in an array meet a condition
+
+    const allAdults = people.every(person => ((new Date()).
+      getFullYear()) - person.year >= 19);
+    
+    console.log(allAdults);
+
+
     // Array.prototype.find()
-    // Find is like filter, but instead returns just the one you are looking for
+    // Find is like filter, but instead of returning a subset of the array, find returns just the first one you are looking for
     // find the comment with the ID of 823423
+    // const comment = comments.find(function(comment) {
+    //   if (comment.id === 823423) {
+    //     return true;
+    //   }
+    // });
+
+    const comment = comments.find(comment => comment.id === 823423);
+
+    console.log(comment);
 
     // Array.prototype.findIndex()
+    // findIndex helps me locate a thing in an array before I do something with it
     // Find the comment with this ID
     // delete the comment with the ID of 823423
 
+    const index = comments.findIndex(comment => comment.id === 823423);
+
+    console.log(index);
+
+    // comments.splice(index, 1);
+
+    const newComments = [
+      // with spread, I would get an array inside the newComments array
+      ...comments.slice(0, index),
+      ...comments.slice(index + 1)
+    ];
   </script>
 </body>
 </html>
