--- a/11 - Custom Video Player/index.html
+++ b/11 - Custom Video Player/index.html
@@ -1,3 +1,10 @@
+<!-- build the HTML5 video player -->
+<!-- button to pause and play -->
+<!-- slider button for the volume -->
+<!-- slider button for fast forward -->
+<!-- skip button for skipping forward 25s-->
+<!-- skip button for skipping back 10s -->
+<!-- click the video itself, pauses and plays -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +14,7 @@
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
 <body>
-
+  <!-- bunch of divs, and when I hover over the video, the bunch of divs transitions in position up and down -->
    <div class="player">
      <video class="player__video viewer" src="652333414.mp4"></video>
 
@@ -16,8 +23,10 @@
         <div class="progress__filled"></div>
        </div>
        <button class="player__button toggle" title="Toggle Play">►</button>
+       <!-- step is how much the increments are on the slider -->
        <input type="range" name="volume" class="player__slider" min="0" max="1" step="0.05" value="1">
        <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
+       <!-- data-skip can go on anything -->
        <button data-skip="-10" class="player__button">« 10s</button>
        <button data-skip="25" class="player__button">25s »</button>
      </div>
